init(dev-YB-11): add remove,increase,reduce,totalAmount,findCard in Basket.js, add basket.scss,header.scss and fix slider.scss z-index dots

--- a/src/scss/components/_basket.scss
+++ b/src/scss/components/_basket.scss
@@ -3,21 +3,22 @@
 
 .basket-modal {
   position: fixed;
-  bottom: 10px;
-  right: 10px;
+  bottom: 0;
+  right: 0;
 
   display: flex;
   align-items: center;
   justify-content: center;
   display: none;
 
-  min-width: 20%;
+  min-width: 35%;
   max-height: 50%;
   overflow-y: auto;
   overflow-x: hidden;
 
   border: 1px solid black;
   border-radius: 20px;
+  margin: 10px;
 
   &__content {
     position: relative;
@@ -54,11 +55,26 @@
     justify-content: space-between;
     margin-bottom: 15px;
     &__title {
-      margin-right: 30px;
+      margin-right: 10px;
       @extend %text-style-basket-item-title-18-20;
+      max-width: 220px;
     }
-    &__price {
+    &__increase,
+    &__reduce,
+    &__remove {
+      padding: 5px 10px;
+      @extend %text-style-basket-item-title-18-20;
+      border: none;
+      border-radius: 10px;
+      color: color.$dark-text-color;
+      background-color: color.$background-basket-button;
+      cursor: pointer;
+      margin: 0px 5px;
+    }
+    &__price,
+    &__amount {
       @extend %text-style-basket-item-price-18-20;
+      margin: 0px 5px;
     }
   }
   &__price {
